force-app/main/default/objects/Response_Answer__c/Response_Answer__c.object-meta.xml
<CustomObject>
    <description
  >Individual answer selections made by users during a questionnaire session, linking responses to specific answer options.</description>
    <label>Response Answer</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Response Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>