force-app/main/default/objects/Response_Answer__c/fields/Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Links this response to the specific answer option selected by the user.</description>
    <inlineHelpText
  >The answer option that was selected for this question.</inlineHelpText>
    <label>Answer Option</label>
    <referenceTo>Answer_Option__c</referenceTo>
    <relationshipLabel>Response Answers</relationshipLabel>
    <relationshipName>Response_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>