force-app/main/default/objects/Response_Answer__c/fields/Answered_Date__c.field-meta.xml
<CustomField>
    <fullName>Answered_Date__c</fullName>
    <description
  >The date and time when the user selected this answer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Timestamp when this specific answer was selected.</inlineHelpText>
    <label>Answered Date</label>
    <type>DateTime</type>
</CustomField>