force-app/main/default/objects/Response_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Links this answer to the question that was answered.</description>
    <inlineHelpText>The question this answer is responding to.</inlineHelpText>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Response Answers</relationshipLabel>
    <relationshipName>Response_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>