force-app/main/default/objects/Response_Answer__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description
  >Links this answer selection to its parent response session.</description>
    <inlineHelpText
  >The questionnaire response this answer belongs to.</inlineHelpText>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Response Answers</relationshipLabel>
    <relationshipName>Response_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>